binding.pryで標準入出力を受け付ける

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    stdin_open: true
+    tty: true
   js:
     image: rails_template:latest
     command: yarn build --watch
