--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,15 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - selenium_chrome
     stdin_open: true
     tty: true
+    environment:
+      - "SELENIUM_DRIVER_URL=http://selenium_chrome:4444/wd/hub"
+  selenium_chrome:
+    image: seleniarm/standalone-chromium
+    ports:
+      - 4444:4444
   js:
     image: rails_template:latest
     command: yarn build --watch
